--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -2,9 +2,9 @@ name: Black Linter
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
