--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,9 @@ __pycache__/
 src/__pycache__/
 .idea/
 .ipynb_checkpoints/
-
+src/main.py
+src/assessment.py
+data/Clifford_Generator.py
+data/Evaluation_Graphs.py
+src/scheduling/
+src/randomized_benchmarking
