--- a/.github/workflows/test_routine.yml
+++ b/.github/workflows/test_routine.yml
@@ -27,7 +27,7 @@ jobs:
               pip install -r requirements.txt
 
       - name: Test package
-        run: python -m unittest tests/
+        run: python -m unittest discover -s ./tests
 
 
 
