workflow multi-platform

--- a/.github/workflows/test_routine.yml
+++ b/.github/workflows/test_routine.yml
@@ -12,7 +12,14 @@ on:
 jobs:
   test_routine:
     name:    Test Python Routine
-    runs-on: ubuntu-latest
+
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+
+
     steps:
       - uses: actions/checkout@v3
         with:
